# stepdad

./: .gitignore  README.md  pyproject.toml
experiments/ces/: run.py
experiments/location_finding/: run.py
experiments/temporal_discounting/: run.py
src/stepdad/inference/: importance_sampling.py
src/stepdad/logging/: logger.py
src/stepdad/models/: ces.py  location_finding.py  temporal_discounting.py
src/stepdad/objectives/: spce.py
src/stepdad/policy/: baselines.py  dad.py
src/stepdad/training/: train.py
